Fix: real actual fix the images on index, now no white space

--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 
 .column {
   float: left;
-  width: 25%;
+  width: 33.33%;
   padding: 5px;
-  margin-left: 10px;
+  border: 10px solid transparent;
 }
 .column img {
 	width: 95%;
